--- a/ProAgilWebApi/ProAgilWebApi.csproj
+++ b/ProAgilWebApi/ProAgilWebApi.csproj
@@ -23,4 +23,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProAgil.Domain\ProAgil.Domain.csproj" />
+    <ProjectReference Include="..\ProAgil.Repository\ProAgil.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
