--- a/ProAgil.Repository/ProAgil.Repository.csproj
+++ b/ProAgil.Repository/ProAgil.Repository.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.4"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.4"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="5.0.4"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="5.0.4"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
